--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <meta name="keywords" content="Eng Mecânica, Engenharia Mecânica,  curriculo,experiências, developer, html, css, ruby, ruby on rails">
 			<link href="https://fonts.googleapis.com/css?family=Overpass|Roboto+Slab" rel="stylesheet">
             <link href="styleCurriculo.css" rel="stylesheet">
+            <link rel="icon" type="imagem/png" href="favicon.png" />
     </head>
     <body>
         <img class="foto1" src="Mauricio.jpeg" title="Foto Mauricio" alt="Foto Mauricio">
