--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 		        Brasileiro, divorciado, 24 anos.<br>
 		        Rua Celso Cleto, 385 Jardim Helena, Batatais - São Paulo.<br>
 		        Telefones: (16) 981033376 ; (16) 992173870 <sub>(recados)</sub>.<br>
-		        Email: mauriciopdvg@gmail.com
+		        Email: mauriciopdvg@gmail.com<br>
+		        <b><a target="blank" href="https://web.facebook.com/Mauricio.Storin">Facebook</a></b>, <b><a target="blank" href="https://www.instagram.com/mauricio_ps/?hl=pt-br">Instagram</a></b>, <b><a target="blank" href="https://www.linkedin.com/in/maur%C3%ADcio-pereira-881260105/">Linkedin.</a></b>
 		    </p>		    
 
 		    <h2>Objetivo:</h2>
