--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		    <h2>Formação:</h2>
 		               
 	        <ul>
-							<li>Web Developor:</li>
+							<li>Web Developer:</li>
 	            <li>Desenvolvedor web completo - udemy.com, Andre Fontenelle - cursando.</li>
 	            <li>JavaScript completo - udemy.com, Hcode - cursando.</li>
 	            <li>Ruby on Rails - udemy.com, Rob percival - cursando.</li>
