--- a/index.html
+++ b/index.html
@@ -42,12 +42,23 @@
         <h2>Formação:</h2>
                      
         <ul>
-          <li>Desenvolvedor web completo - udemy.com, Andre Fontenelle - cursando.</li>
-          <li>JavaScript completo - udemy.com, Hcode - cursando.</li>
-          <li>Ruby on Rails - udemy.com, Rob percival - cursando.</li>
-          <li>Git e Github na vida real - udemy.com, Willian Justen.</li>
-          <li>Complete Ruby Course - udemy.com, Mashrur Hossain e Evgeny Rahman.</li>             
-          <li>Engenharia Mecânica, Universidade Paulista - Unip - Ribeirão Preto, cursando (5&#8226; ano).</li>
+          <li>
+            Engenharia Mecânica, Universidade Paulista - Unip - Ribeirão Preto, cursando (5&#8226; ano).
+          </li>
+          <li>
+            <a href="https://www.udemy.com/course/react-redux-pt/" target="blank">React + Redux: Fundamentos</a> - udemy.com, Leonardo Moura - cursando.
+          </li>
+          <li>
+            <a href="https://www.udemy.com/course/the-complete-ruby-on-rails-developer-course/" target="blank">Ruby on Rails</a> - udemy.com, Mashrur Hossain e Rob percival - cursando.
+          </li>
+          <li>
+            <a href="https://www.udemy.com/course/git-e-github-na-vida-real/" target="blank">Git e Github na vida real</a>
+            - udemy.com, Willian Justen.
+          </li>
+          <li>
+            <a href="https://www.udemy.com/course/complete-ruby-programmer/" target="blank">Complete Ruby Programmer</a>
+            - udemy.com, Mashrur Hossain e Evgeny Rahman.
+          </li>
           <li>Solidworks, Senai - Ribeirão Preto, conclusão em 2013.</li>
           <li>Torneiro Mecânico, Senai - Ribeirão Preto, conclusão em 2012.</li>
         </ul>
@@ -57,13 +68,10 @@
         <h2>Experiência Profissional:</h2>
 
         <p>
-          2019 - 2020 - <a href="https://www.codeminer42.com/" target="blank">Codeminer42</a>. Estagiário backend.
+          2019 - 2020 - <a href="https://www.codeminer42.com/" target="blank">Codeminer42</a> - Estagiário backend.
           2017 - 2019 - Jalo Usinagem. Cargo: Aux. Usinagem.<br>
-          2018 - 2019 - Fernando Augusto Silva Batatais-ME. (Ferdof), Cargo: Aux. Usinagem.<br>
-          2011 - 2014 - T.P Turbo Peças ind. e com. ltda. Me. <br>
-          <span class="identified">
-            Cargo: Aux. Ferramentaria. Principais atividades: manutenção em matrizes de resina, para fundição.
-          </span>
+          2018 - 2019 - Fernando Augusto Silva Batatais-ME. (Ferdof) - Aux. Usinagem.<br>
+          2011 - 2014 - T.P Turbo Peças ind. e com. ltda. Me. - Aux. Ferramentaria.
         </p>
       </section>
 
