--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <link rel="icon" type="imagem/png" href="favicon.png" />
   </head>
   <body>
-    <img class="profile-photo" src="Mauricio.jpeg" title="Foto Mauricio" alt="Foto Mauricio">
+    <img class="profile-photo" src="Mauricio.jpeg" title="Foto perfil" alt="Foto Mauricio">
     <div id="text">
       <section id="personal-data">
         <h1 class="top">Maurício Pereira</h1>  
         <p>
-          Brasileiro, divorciado, 25 anos.<br>
+          Brasileiro, divorciado, 26 anos.<br>
           Rua Celso Cleto, 385 Jardim Helena, Batatais - São Paulo.<br>
           Telefones: (16) 981033376 ; (16) 992173870 <sub>(recados)</sub>.<br>
           Email: mauriciopdvg@gmail.com<br>
@@ -33,8 +33,7 @@
 
         <p>
           Atuar como desenvolvedor de software, e futuramente, como um engenheiro de software.<br>
-          Começando como estágiario, adiquirir conhecimento para que, possa contribuir com o<br>
-          crescimento da empresa.
+          Adiquirir conhecimento para que, possa contribuir com o crescimento da empresa.
         </p>
       </section>
 
@@ -43,21 +42,21 @@
                      
         <ul>
           <li>
-            Engenharia Mecânica, Universidade Paulista - Unip - Ribeirão Preto, cursando (5&#8226; ano).
+            Engenharia Mecânica, Universidade Paulista - Unip - Ribeirão Preto, conclusão em 2019.
           </li>
           <li>
-            <a href="https://www.udemy.com/course/react-redux-pt/" target="blank">React + Redux: Fundamentos</a> - udemy.com, Leonardo Moura - cursando.
+            <a href="https://www.udemy.com/course/react-redux-pt/" target="blank">React + Redux: Fundamentos</a> - udemy.com, Leonardo Moura, conclusão em 2019.
           </li>
           <li>
-            <a href="https://www.udemy.com/course/the-complete-ruby-on-rails-developer-course/" target="blank">Ruby on Rails</a> - udemy.com, Mashrur Hossain e Rob percival - cursando.
+            <a href="https://www.udemy.com/course/the-complete-ruby-on-rails-developer-course/" target="blank">Ruby on Rails</a> - udemy.com, Mashrur Hossain e Rob percival, conclusão em 2019.
           </li>
           <li>
             <a href="https://www.udemy.com/course/git-e-github-na-vida-real/" target="blank">Git e Github na vida real</a>
-            - udemy.com, Willian Justen.
+            - udemy.com, Willian Justen, conclusão em 2019.
           </li>
           <li>
             <a href="https://www.udemy.com/course/complete-ruby-programmer/" target="blank">Complete Ruby Programmer</a>
-            - udemy.com, Mashrur Hossain e Evgeny Rahman.
+            - udemy.com, Mashrur Hossain e Evgeny Rahman, conclusão em 2019.
           </li>
           <li>Solidworks, Senai - Ribeirão Preto, conclusão em 2013.</li>
           <li>Torneiro Mecânico, Senai - Ribeirão Preto, conclusão em 2012.</li>
@@ -68,7 +67,8 @@
         <h2>Experiência Profissional:</h2>
 
         <p>
-          2019 - 2020 - <a href="https://www.codeminer42.com/" target="blank">Codeminer42</a> - Estagiário backend.
+          2020 - <a href="https://codebit.com.br/" target="blank">Codebit</a> - Programador 1<br>
+          2019 - 2020 - <a href="https://www.codeminer42.com/" target="blank">Codeminer42</a> - Estagiário backend.<br>
           2017 - 2019 - Jalo Usinagem. Cargo: Aux. Usinagem.<br>
           2018 - 2019 - Fernando Augusto Silva Batatais-ME. (Ferdof) - Aux. Usinagem.<br>
           2011 - 2014 - T.P Turbo Peças ind. e com. ltda. Me. - Aux. Ferramentaria.
