--- a/index.html
+++ b/index.html
@@ -114,16 +114,22 @@
             <h2>Experiência Profissional:</h2>
 
             <p>
-              2020 -
-              <a href="https://codebit.com.br/" target="blank">Codebit</a> - Programador 1<br />
-              2019 - 2020 -
-              <a href="https://www.codeminer42.com/" target="blank">Codeminer42</a>
-              - Estagiário backend.<br />
-              2017 - 2019 - Jalo Usinagem. Cargo: Aux. Usinagem.<br />
-              2018 - 2019 - Fernando Augusto Silva Batatais-ME. (Ferdof) - Aux.
-              Usinagem.<br />
-              2011 - 2014 - T.P Turbo Peças ind. e com. ltda. Me. - Aux.
-              Ferramentaria.
+              2022 - <a href="https://collateralxp.com/" target="blank">CollateralXP</a>
+                - Software Engineer
+              <br/>
+              2021 - 2022 <a href="https://codeminer42.com/" target="blank">Codeminer42</a>
+                - Desenvolvedor de Software
+              <br/>
+              2020 - 2021 <a href="https://codebit.com.br/" target="blank">Codebit</a> - Programador 1
+              <br />
+              2019 - 2020 - <a href="https://www.codeminer42.com/" target="blank">Codeminer42</a>
+                - Estagiário backend.
+              <br />
+              2017 - 2019 - Jalo Usinagem. Cargo: Aux. Usinagem.
+              <br />
+              2018 - 2019 - Fernando Augusto Silva Batatais-ME. (Ferdof) - Aux. Usinagem.
+              <br />
+              2011 - 2014 - T.P Turbo Peças ind. e com. ltda. Me. - Aux. Ferramentaria.
             </p>
           </section>
         </div>
